--- a/part2/phonebook/api/package.json
+++ b/part2/phonebook/api/package.json
@@ -6,11 +6,13 @@
     "scripts": {
         "start": "node index.js",
         "dev": "nodemon index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "lint": "eslint ."
     },
     "author": "Daniel Ruiz",
     "license": "MIT",
     "devDependencies": {
+        "eslint": "^8.37.0",
         "nodemon": "^2.0.21"
     },
     "dependencies": {
